--- a/Css/index0.css
+++ b/Css/index0.css
@@ -86,10 +86,12 @@ a:hover{
     cursor: pointer;
     color: rgb(24, 64, 113);
 }
+nav ul{
+    margin-bottom: 20px;
+}
 img{
     position: absolute;
     z-index: 999;
-    border-radius: 999;
     display: inline-block;
     bottom: 70%;
 }
