--- a/Css/index_02.css
+++ b/Css/index_02.css
@@ -99,6 +99,10 @@ body{
     overflow: hidden;
     width: 270px;
   }
+  #btnBill:hover{
+    cursor: pointer;
+    background-color: antiquewhite;
+  }
   .sec ul li:hover {
     background-color: rgba(0, 56, 198, 0.698);
     font-size: 20px;
@@ -194,7 +198,6 @@ div#chatBox{
     position: fixed;
     bottom: 0;
     z-index: 100;
-    margin-top: 10vh;
 }
 form{
     width: 100%;
@@ -217,4 +220,14 @@ div.user-messsage, div.ai-message{
     z-index: -10;
     display: flex;
     align-items: center;
+}
+@media screen and (max-width: 400px) {
+  body{
+    width: 100vw;
+    box-sizing: content-box;
+    overflow: hidden;
+  }
+  #entry{
+    margin-bottom: 10vh;
+  }
 }
